force-app/main/default/objects/sugati__Holiday_Type__c/sugati__Holiday_Type__c.object-meta.xml
<CustomObject>
    <label>Holiday Type</label>
    <nameField>
        <label>Holiday Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>