force-app/main/default/objects/sugati__Holiday_Type__c/fields/sugati__HT_Default__c.field-meta.xml
<CustomField>
    <fullName>sugati__HT_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set default holiday type selected in Holiday Enquiry.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>