force-app/main/default/objects/sugati__Holiday_Type__c/fields/sugati__HT_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__HT_HE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show on Holiday Enquiry Page?</inlineHelpText>
    <label>HE</label>
    <type>Checkbox</type>
</CustomField>