force-app/main/default/objects/sugati__Holiday_Type__c/fields/sugati__HT_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__HT_Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>